将应用进行了现代化升级，下一步决定大修数据库